--- a/css/styles.css
+++ b/css/styles.css
@@ -628,20 +628,82 @@
           align-items: center;
 }
 
+.opinions {
+  padding-bottom: 100px;
+}
+
+.opinions .swipe-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 100px;
+  gap: 20px;
+}
+
+.opinions .swiper-button-next, .opinions .swiper-button-prev {
+  position: unset;
+  margin: 0;
+  border: 3px solid rgba(62, 134, 245, 0.5);
+  padding: 25px;
+  border-radius: 15px;
+}
+
+.opinions .swiper-button-next::after, .opinions .swiper-button-prev::after {
+  font-size: 40px;
+  font-weight: 600;
+}
+
 .opinion {
-  padding: 85px 25px 0 50px;
-  background-color: var(--whitePrimary);
+  position: relative;
+  padding: 85px 50px 50px 50px;
   border-radius: 50px;
+  background: url(../pic/quote-sign.png);
+  background-repeat: no-repeat;
+  background-position: center 10%;
+  background-color: var(--whitePrimary);
 }
 
 .opinion-author {
   color: var(--greenPrimary);
 }
 
+.opinion-author-company {
+  color: var(--blackBgcPrimary);
+}
+
 .opinion > p {
   text-align: center;
   font-size: 20px;
   line-height: 2;
+  font-weight: 500;
   margin-bottom: 10px;
+}
+
+.opinion-author-pic {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 30%;
+  -webkit-transform: translate(-50%, 50%);
+          transform: translate(-50%, 50%);
+  background-color: var(--whitePrimary);
+  text-align: center;
+  padding: 10px;
+  border-radius: 100px / 75px;
+}
+
+.opinion-author-pic span {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: var(--whitePrimary);
+  padding-inline: 10px;
+  top: 15%;
+  right: 10%;
+  border-radius: 25px;
 }
 /*# sourceMappingURL=styles.css.map */
