--- a/scss/_opinions.scss
+++ b/scss/_opinions.scss
@@ -1,13 +1,42 @@
-.opinion{
-  padding: 85px 25px 0 50px;
-  background-color: var(--whitePrimary);
-  border-radius: 50px;
+.opinions{
+  padding-bottom: 100px;
 
-  &-text{
+  .swipe-buttons{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 20px;
   }
+
+  .swiper-button-next, .swiper-button-prev{
+    position: unset;
+    margin: 0;
+    border: 3px solid rgba(62, 134, 245, 0.5);
+    padding: 25px;
+    border-radius: 15px;
+
+    &::after{
+      font-size: 40px;
+      font-weight: 600;
+    }
+  }
+}
+
+.opinion{
+  position: relative;
+  padding: 85px 50px 50px 50px;
+  border-radius: 50px;
+  background: url(../pic/quote-sign.png);
+  background-repeat: no-repeat;
+  background-position: center 10%;
+  background-color: var(--whitePrimary);
 
   &-author{
     color: var(--greenPrimary)
+  }
+
+  &-author-company{
+    color: var(--blackBgcPrimary);
   }
 }
 
@@ -15,5 +44,28 @@
   text-align: center;
   font-size: 20px;
   line-height: 2;
+  font-weight: 500;
   margin-bottom: 10px;
+}
+
+.opinion-author-pic{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 30%;
+  transform: translate(-50%, 50%);
+  background-color: var(--whitePrimary);
+  text-align: center;
+  padding: 10px;
+  border-radius: 100px / 75px;
+
+  span{
+    position: absolute;
+    display: flex;
+    background-color: var(--whitePrimary);
+    padding-inline: 10px;
+    top: 15%;
+    right: 10%;
+    border-radius: 25px;
+  }
 }
