--- a/css/styles.css
+++ b/css/styles.css
@@ -15,32 +15,40 @@
 }
 
 .container {
-  padding: 0 10%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .header {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   background: url(../pic/header-bgc-pic.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__nav {
   width: 100%;
   position: absolute;
-  z-index: 2;
-  left: 0;
   top: 0;
-  width: 100%;
+  left: 0;
+  z-index: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 24px 130px;
 }
 
 .header__nav .brand {
@@ -88,44 +96,57 @@
 }
 
 .header__heading {
+  max-width: 820px;
   color: var(--whitePrimary);
-  position: absolute;
-  font-weight: 600;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  margin: 0 auto;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
+  position: relative;
 }
 
 .header__heading-top {
-  font-size: 64px;
   margin-bottom: 40px;
+  text-align: center;
+  color: var(--whitePrimary);
+  font-weight: 600;
+  font-size: 64px;
 }
 
 .header__heading-bottom {
+  text-align: center;
+  color: var(--whitePrimary);
   font-size: 24px;
   line-height: 48px;
   font-weight: 500;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .main {
   background-color: #F7F7F7;
 }
 
-.form {
+.box-form {
   position: relative;
+  background-color: var(--whitePrimary);
+  padding: 60px 48px;
+}
+
+.form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 60px 48px;
-  background-color: var(--whitePrimary);
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   gap: 40px;
+  min-height: 154px;
 }
 
 .form .togglers {
@@ -172,7 +193,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 44px 22px;
+  padding: 0 22px;
   border: 1px solid var(--blackBgcPrimary);
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -215,6 +236,7 @@
 
 .form .cities__icon,
 .form .dates__icon {
+  min-width: 40px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -230,10 +252,12 @@
   height: 100%;
 }
 
+.form .cities {
+  max-width: 382px;
+}
+
 .form .dates {
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+  max-width: 477px;
 }
 
 .form .dates__leave, .form .dates__return {
@@ -247,23 +271,19 @@
 }
 
 .form .date-text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
   font-size: 24px;
   line-height: 1;
   line-break: strict;
 }
 
 .form input[type='date'] {
-  visibility: hidden;
+  display: none;
 }
 
 .form .submitBtn {
   background-color: var(--greenPrimary);
   border: none;
-  padding: 50px;
+  min-width: 154px;
   border-radius: 65px;
 }
 
@@ -423,9 +443,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   height: 100vh;
-  padding-block: 100px;
 }
 
 .promo__img-wrapper {
