--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,22 +1,23 @@
 .header{
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   background:url(../pic/header-bgc-pic.jpg) ;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 
   &__nav{
     width: 100%;
     position: absolute;
-    z-index: 2;
-    left: 0;
     top: 0;
-    width: 100%;
+    left: 0;
+    z-index: 2;
     display: flex;
     justify-content: space-between;
-    padding: 24px 130px;
 
 
     .brand{
@@ -62,21 +63,20 @@
 }
 
 .header__heading{
+  max-width: 820px;
   color: var(--whitePrimary);
-  position: absolute;
-  font-weight: 600;
-  top: 50%;
-  left: 50%;
-  width: 50%;
-  margin: 0 auto;
-  transform: translate(-50%,-50%);
-  text-align: center;
+  position: relative;
   &-top{
-    font-size: 64px;
     margin-bottom: 40px;
+    text-align: center;
+    color: var(--whitePrimary);
+    font-weight: 600;
+    font-size: 64px;
   }
 
   &-bottom{
+    text-align: center;
+    color: var(--whitePrimary);
     font-size: 24px;
     line-height: 48px;
     font-weight: 500;
