--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,13 +2,17 @@
   background-color: #F7F7F7;
 }
 
-.form{
+.box-form{
   position: relative;
-  display: flex;
-  padding: 60px 48px;
   background-color: var(--whitePrimary);
+  padding: 60px 48px;
+}
+
+.form{
+  display: flex;
   justify-content: space-between;
   gap:40px;
+  min-height: 154px;
 
   .togglers{
     bottom: 100%;
@@ -46,7 +50,7 @@
   .cities,
   .dates{
     display: flex;
-    padding: 44px 22px;
+    padding: 0 22px;
     border: 1px solid var(--blackBgcPrimary);
     justify-content: space-between;
     border-radius: 25px;
@@ -73,6 +77,7 @@
     }
 
     &__icon{
+      min-width: 40px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
@@ -88,8 +93,12 @@
     }
   }
 
+  .cities{
+    max-width: 382px;
+  }
+
   .dates{
-    flex-grow: 2;
+    max-width: 477px;
 
     &__leave,
     &__return{
@@ -102,23 +111,23 @@
   }
 
   .date-text{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
     font-size: 24px;
     line-height: 1;
     line-break: strict;
   }
 
   input[type='date']{
-    visibility: hidden;
+    display: none;
   }
 
   .submitBtn{
     background-color: var(--greenPrimary);
     border: none;
-    padding: 50px;
+    min-width: 154px;
     border-radius: 65px;
   }
 }
